# ajhc

./: Makefile.am  Makefile.cabalinst.in  Setup.hs.in  ajhc.cabal.in  configure.ac  library_deps.make
jahm_recipe/HUnit/: HUnit.cabal
jahm_recipe/QuickCheck/: QuickCheck.cabal
jahm_recipe/deepseq/: deepseq.cabal
jahm_recipe/html/: html.cabal
jahm_recipe/pretty/: pretty.cabal
jahm_recipe/transformers/: transformers.cabal
lib/applicative/: applicative.yaml
lib/jhc/: jhc.yaml
lib_ext/Diff/: Diff.cabal
lib_ext/bytestring/: bytestring.yaml
lib_ext/containers/: containers.cabal
lib_ext/filepath/: filepath.cabal
lib_ext/parsec/: parsec.cabal
lib_ext/xhtml/: xhtml.cabal
selftest/: SelfTest.hs  UnionSolve.hs
src/Jhc/: DataConstructors.hs  DataConstructors.hs-boot  FindFixpoint.hs  GenUtil.hs  Interactive.hs  Options.hs  PackedString.hs  Stats.hs
src/Jhc/C/: FFI.hs  FromGrin2.hs  Generate.hs  Prims.hs
src/Jhc/Cmm/: Number.hs  Op.hs  OpEval.hs
src/Jhc/DerivingDrift/: DataP.hs  Drift.hs  RuleUtils.hs  StandardRules.hs
src/Jhc/Doc/: Attr.hs  Chars.hs  DocLike.hs  PPrint.hs  Pretty.hs
src/Jhc/E/: Annotate.hs  Arbitrary.hs  Binary.hs  CPR.hs  Demand.hs  Diff.hs  E.hs  Eta.hs  Eval.hs  FreeVars.hs  FromHs.hs  Inline.hs  LambdaLift.hs  LetFloat.hs  Lint.hs  Main.hs  PrimDecode.hs  PrimOpt.hs  Program.hs  Rules.hs  SSimplify.hs  SStrictness.hs  Show.hs  Show.hs-boot  Subst.hs  ToHs.hs  Traverse.hs  Type.hs  TypeAnalysis.hs  TypeCheck.hs  (+2 more)
src_jahm/: LICENSE  Main.hs
src_main/: Main.hs
utils/: gen_props.prl  op_names.prl  op_raw.prl  opt_sets.prl
(+126 files in other folders)
