name:		pretty
version:	1.0.1.2
synopsis:	Pretty-printing library
category:       Text
options:        -fcpp
description:
	This package contains John Hughes's pretty-printing library,
        heavily modified by Simon Peyton Jones.
Build-Depends: haskell-extras
Exposed-Modules:
        Text.PrettyPrint
        Text.PrettyPrint.HughesPJ
